temp/CACommunity-Salesforce/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CA Owner%2FRoot Inclusion Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>All_Fields_Verified__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>All Fields Verified?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_1__c</fullName>
        <inlineHelpText>CA Email Alias 1 and 2 is needed so that more than one person in your organization will receive notifications in case the primary contact is out of the office or leaves the organization.</inlineHelpText>
        <label>CA Email Alias 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_2__c</fullName>
        <inlineHelpText>CA Email Alias 1 and 2 is needed so that more than one person in your organization will receive notifications in case the primary contact is out of the office or leaves the organization.</inlineHelpText>
        <label>CA Email Alias 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CA_s_Reponse_to_Recom_Prac_Verified__c</fullName>
        <label>CA&apos;s Reponse to Recom Prac (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_s_Response_to_Prob_Prac_Verified__c</fullName>
        <description>CA&apos;s Response to Problematic Practices</description>
        <label>CA&apos;s Response to Prob Prac (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAs_Reponse_to_Problematic_Practices__c</fullName>
        <inlineHelpText>CA&apos;s response to potentially problematic practices</inlineHelpText>
        <label>CA&apos;s Response to Problematic  Practices</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAs_Response_to_Recommended_Practices__c</fullName>
        <inlineHelpText>CA&apos;s Response to Mozilla&apos;s Recommended Practices</inlineHelpText>
        <label>CA&apos;s Response to Recommended  Practices</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Website_Verified__c</fullName>
        <label>Company Website (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <inlineHelpText>Website URL</inlineHelpText>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <formula>Contact.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Department of the POC.</inlineHelpText>
        <label>Contact Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Title of the POC.</inlineHelpText>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>Contact.Type_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The role of POC.</inlineHelpText>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus_Verified__c</fullName>
        <label>Geographic Focus (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus__c</fullName>
        <label>Geographic Focus</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_to_Mozilla_Users_Verified__c</fullName>
        <label>Impact to Mozilla Users (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_to_Mozilla_Users__c</fullName>
        <label>Impact to Mozilla Users</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Comments_on_Case__c</fullName>
        <label>Comments by Mozilla on Case</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_to_Bugzilla_Bug__c</fullName>
        <inlineHelpText>Link to Bugzilla case request</inlineHelpText>
        <label>Link to Bugzilla Bug</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Contact_Department__c</fullName>
        <inlineHelpText>Department of the new POC.</inlineHelpText>
        <label>New Contact Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Email__c</fullName>
        <inlineHelpText>A direct E-mail address of the new contact.</inlineHelpText>
        <label>New Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Contact_Name__c</fullName>
        <inlineHelpText>Name of a new contact filling the role of Primary POC or POC.</inlineHelpText>
        <label>New Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Contact_Phone__c</fullName>
        <label>New Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Contact_Title__c</fullName>
        <inlineHelpText>Title of the new POC.</inlineHelpText>
        <label>New Contact Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Type__c</fullName>
        <inlineHelpText>The role of new POC.</inlineHelpText>
        <label>New Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organizational_Type_Others_Verified__c</fullName>
        <label>Organizational Type Others (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organizational_Type_Others__c</fullName>
        <label>Organizational Type (Others)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organizational_Type_Verified__c</fullName>
        <label>Organizational Type (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organizational_Type__c</fullName>
        <inlineHelpText>Indicate whether the CA is operated by a private or public corporation, government agency, international organization, academic institution or consortium, NGO, etc. In some cases the CA may be of a hybrid type, e.g., a corporation established by govt.</inlineHelpText>
        <label>Organizational Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consortium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Potentially_Problematic_Practices__c</fullName>
        <defaultValue>&apos;https://wiki.mozilla.org/CA:Problematic_Practices#Potentially_problematic_CA_practices&apos;</defaultValue>
        <label>Potentially Problematic Practices</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Primary_Market_Customer_Base_Verified__c</fullName>
        <label>Primary Mkt / Customer Base (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Market_Customer_Base__c</fullName>
        <inlineHelpText>Which types of customers does the CA serve?
Are there particular vertical market segments in which it operates?
Does the CA focus its activities on a particular country or other geographic region?</inlineHelpText>
        <label>Primary  Market / Customer Base</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problematic_Practices_Statement__c</fullName>
        <defaultValue>&quot;I have reviewed Mozilla&apos;s list of Potentially Problematic Practices, and confirm that we do not do those practices, with exceptions and clarifications noted in the text box below.&quot;</defaultValue>
        <label>Problematic Practices Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Practices_Statement__c</fullName>
        <defaultValue>&quot;I have reviewed Mozilla&apos;s list of Recommended Practices, and confirm that we follow those practices, with exceptions and clarifications noted in the text box below.&quot;</defaultValue>
        <label>Recommended Practices Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Practices__c</fullName>
        <defaultValue>&apos;https://wiki.mozilla.org/CA:Recommended_Practices#CA_Recommended_Practices&apos;</defaultValue>
        <label>Recommended Practices</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>Information verification phases</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Request Received</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Need Information from CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Verification In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Public Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Public Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Action Items from Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, Pending Inclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, Pending Inclusion and EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Included, Pending EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Website__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Request_Status__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Link_to_Bugzilla_Bug__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>CA_Audit_Update_Request</fullName>
        <active>true</active>
        <businessProcess>CA Owner%2FRoot Inclusion Request</businessProcess>
        <description>Submission of the CA audit update request</description>
        <label>CA Audit Update Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>CA_Owner_Root_Inclusion_Request</fullName>
        <active>true</active>
        <businessProcess>CA Owner%2FRoot Inclusion Request</businessProcess>
        <description>Creation of the CA Owner/Root inclusion request</description>
        <label>CA Owner/Root Inclusion Request</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>CheckNewContactTypeForBlank</fullName>
        <active>true</active>
        <description>New Contact Type should not be blank when New Contact Name exists</description>
        <errorConditionFormula>NOT (ISBLANK( New_Contact_Name__c )) 
&amp;&amp; ISPICKVAL( New_Contact_Type__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>New_Contact_Type__c</errorDisplayField>
        <errorMessage>Choose New Contact Type for New Contact Name</errorMessage>
    </validationRules>
</CustomObject>